# technical_test_jellysmack

./: CMakeLists.txt  README.md  main.cpp
